# rod-dynamics-3d

./: .gitignore  .gitmodules  CMakeLists.txt  NONOVERLAP_ANALYSIS.md  README_FEATURE_BRANCH.txt  ROLLBACK_INSTRUCTIONS.md  ReadMe.txt  RodMotionDecomposition_corrupted.md  SPHERE_SUPPORT_REPORT.md  analyze_network.py  benchmark_cuda.sh  benchmark_threads.sh  check_contacts.py  combine_results.py  debug_segseg  delete_this.sh  estimate_log_size.py  generate_weaving.py  major_update_july2026.md  plan_for_reproducing_sweep_results.md  profile_100.csv  ps_relaxed.py  render_relaxed.py  rods_pbc_bruteforce  rods_pbc_bruteforce.cpp  scene_two_rods_f0.json  snapshots.ndjson  temp_file_cli.txt  test_fixed_gravity.json  test_nonoverlap  text1.txt  text2.txt  verify_fdt.py  verify_nonoverlap  verify_nonoverlap.cpp  viz_triples.py
.github/workflows/: ci.yml
analysis_outputs/free_rod_extreme_nsc/: health_summary.json  individual_simulation_results.csv  summary_by_mu_metric.csv
assets/: packings_metadata.csv
assets/scenes/: benchmark_nsc_vs_soft.json  benchmark_soft.json  confined_10_rods.json  confined_n10_box0.70.json  confined_n10_box0.80.json  confined_n2_box0.50.json  cuda_example.json  cuda_gl_demo.json  cundall_test.json  default.json  default_entangled.json  default_entangled_nsc.json  default_for_dynamics_sim.json  default_many_rods.json  default_rsa.json  default_still.json  default_still_1.5x.json  default_still_2x.json  default_with_csv.json  delete_this.json  dissipation_study_sample.json  dissipation_study_with_noise.json  energy_test_soft.json  experiment_bigger_mu_0.2.json  experiment_mu_0.0.json  experiment_mu_0.2.json  experiment_mu_0.4.json  experiment_mu_1.0.json  falling_spheres.json  friction_test.json  friction_test_small.json  hertz_mindlin_test.json  hundreds_rods_collisions.json  kick_n200.json  kick_n200_scale2.json  long_sim.json  long_sim_100_csv.json  mixed_spheres_capsules.json  network_analysis.m  network_analysis2.m  (+67 more)
assets/shaders/: basic.frag  basic.vert  instanced.frag  instanced.vert
code_examples/: extract_connectivity.cpp
docs/: OPENMP_AND_CONTACT_PLAN.md  bugfix_pbc_com_logic.md  cuda_implementation.md  development_checkpoint.md  hard_contact_implementation_plan.md  pbc_overlap_issue.md  phase1_sphere_complete.md  reptation_theory.tex  rigid_body_verlet.md  soft_contact_design.md  sphere_implementation_design.md  sphere_visualization_complete.md  static_kinetic_friction.md
docs/reports/: OPTIMIZATION_REPORT.md  RodMotionDecomposition.md  rigid_bodies_chat.md
example_mujoco_run_scripts/: options.yml  run.py  run.sh  run_gpu.sh
example_mujoco_run_scripts/utils/: first_analysis.py  packing_initialization.py  perturb_rod_packings.py  perturb_rod_packings_mjx.py  util.py
instructions/: contact_detection_common_geometry.md  early_pair_diagnostics.md  early_pair_implementation_checklist.md  friction_reptation.md  friction_reptation_implementation.md  nsc_array_submission_guide.md  nsc_parameter_tuning.md  plan_nsc_dynamic_friction.md  thermal_init_deploy.md
parametric_study/: FREE_ROD_BATCH_GUIDE.md  FREE_ROD_HANDOFF_2026-04-03.md  QUICKSTART_aspect_ratio.md  README.md  README_aspect_ratio.md  README_parametric_analysis.md  README_soft_contact.md  Untitled-1.py  WORKFLOW_soft_contact.md  aggregate_output.py  analyze_cluster_evolution.py  analyze_cone_overlap.py  analyze_connectivity_batch.py  analyze_connectivity_mujoco.py  analyze_connectivity_similarity.py  analyze_contact_network.py  analyze_crossing_evolution.py  analyze_crossing_mujoco.py  analyze_entangled_n200.py  analyze_entangled_pandas.py  analyze_entanglement_mujoco.py  analyze_free_rod.py  analyze_free_rod_endpoints.py  analyze_free_rod_msd.py  analyze_mujoco_batch.py  analyze_reldisp_evolution.py  analyze_rigidification_sweep.py  analyze_scaling_friction.py  analyze_scaling_mujoco.py  analyze_scaling_n.py  analyze_soft_contact.py  batch_analyze_varying_n.py  build_cohort5_csv.py  calc_fdt.py  calc_fdt_low.py  collect_final_entanglement.py  combined_analysis.py  compile_free_rod_sliding.py  confined_study.py  contact_models.tex  (+116 more)
repro/: Makefile  README.md  build_packing_metadata.py  fill_free_volume.py  gen_manifest.py  make_videos.py  run_sweep.py
scripts/: analyze_reptation.py  analyze_reptation_tangent_stop.py  check_csv.py  compare_contact_models.py  compare_reptation_runs.py  embed_rod_metadata.py  plot_reptation_collapse.py  plot_reptation_stat.py  plot_reptation_sweep.py  plot_sliding_length_vs_gap_over_mu.py  plot_tangent_stop_mu_sweep.py  run_network_sweep.py  run_reptation_gapdiam_first_sweeps_nsc_isogi.sh  run_reptation_gapdiam_first_sweeps_soft.sh  run_reptation_soft.py  setup_random_force.py  sweep_reptation.py
src/: main.cpp
study/: aggregate_and_plot.py  analyze_2nd_iteration.py  analyze_stable_core_vs_n.py  analyze_stick_slip.py  analyze_timeseries.py  analyze_topology_evolution.py  batch_convert_endpoints_4th.py  batch_topology_analysis.py  benchmark_cellsize.py  benchmark_hash.py  compare_topology_runs.py  compute_topology.py  create_endpoints_over_time.py  find_stable_core.py  friction_topology_comparison.md  mujoco_contact.py  plot_chirality_change.py  plot_com_trace.py  plot_delta_C_vs_mu.py  plot_min_crossing_evolution.py  plot_output_timeseries.py  plot_pair_distance.py  plot_perrod_velocity.py  plot_stable_core_vs_ar.py  plot_stable_core_vs_mu.py  plot_stable_core_vs_mu_filtered.py  plot_stable_core_vs_mu_new.py  plot_stable_core_vs_n.py  plot_timeseries.py  quick_topology_summary.py  reproduce_plots.md  rod_packing_topology.md  spot_changing_triples.py  stick_slip_test.json  sweep_mu.py  test_topology.py  topology_evolution_log.txt  topology_evolution_summary.md  topology_vs_friction_analysis.md  verify_4th_iteration.py
sweep_mu_results/: scene_mu_0.0.json  scene_mu_0.1.json  scene_mu_0.2.json  scene_mu_0.4.json
temp/: scene.json  scene_soft.json  x_relaxed.txt
tests/: compare_scenes_ke.py  demo_CH_friction_timestepping.py  diagnose_ke.py  diagnose_ke_decrease.py  rod_dynamics_py_example.py  smoke_test.py  study_symplectic.py
(+467 files in other folders)
